    name in the path is searched for in the subscreen hierarchy from the
    root screen; can also find content this way; note that this may
    involve loading a lot of screen definitions and in dev mode will be
    a LOT slower, but in production (cache timeouts turned off) the full
    expanded path is cached as are the screen definitions so there is very
    little overhead
- Entity Facade:
  - Added in operator (_op) for searchFormInputs/search-form-inputs
  - Added entity.field.@default attribute with a Groovy expression to set a
    default for a field based on other fields, constants, etc

Bug Fixes:

- Fixed delete buttons not working on the Find Auto Screen
- Fixed links with images (link.image element) FTL error
- Required service parameters used to use the Groovy definition of empty
  but this is annoying for numbers and such (a zero is generally a valid
  non-empty service parameter), so now uses null for any object or zero
  length String as the definition of empty for required parameters
- Fixed issues with complex-alias where aliased entities were not add
  to list of aliased entities used and alias level function was not added
- Fixed tx cache issue where a value could be updated after putting it into
  the cache causing an attempt to read the original to get an updated value
- Changed ResourceReference.init() to use ExecutionContextFactory instead
  of ExecutionContext for cases where the object is long-lived

===========================================================================
Release 1.4.1 - 01 Aug 2014
===========================================================================

Moqui Framework 1.4.1 is a minor new feature and bug fix release. Many of
the new features and bug fixes are related to multi-tenant support
including better isolation of tenants and tenant provisioning services.
Other fixes and improvements are related to Service ECA rules, jobs, DB
setup, and the tx cache.
