@@ -34,6 +34,7 @@ class ScreenDefinition {
     protected final ScreenFacadeImpl sfi
     protected final Node screenNode
     protected final String location
+    Long sourceLastModified = null
 
     protected Map<String, ParameterItem> parameterByName = new HashMap()
     protected Map<String, TransitionItem> transitionByName = new HashMap()
@@ -246,7 +247,31 @@ class ScreenDefinition {
             }
         }
 
-        // not immediate subscreen, start recursion
+        // if this is a transition right under this screen use it before searching subscreens
+        TransitionItem ti = getTransitionItem(curName, requestMethod)
+        if (ti != null) return remainingPathNameList
+
+        // breadth first by looking at subscreens of each subscreen on a first pass
+        for (Map.Entry<String, SubscreensItem> entry in subscreensByName.entrySet()) {
+            ScreenDefinition subSd = sfi.getScreenDefinition(entry.getValue().getLocation())
+            SubscreensItem subSsi = getSubscreensItem(curName)
+            if (subSsi != null) {
+                if (remainingPathNameList.size() > 1) {
+                    List<String> subPathNameList = new ArrayList<>(remainingPathNameList)
+                    subPathNameList.remove(0)
+                    ScreenDefinition subSubSd = sfi.getScreenDefinition(subSsi.getLocation())
+                    List<String> subPath = subSubSd.findSubscreenPath(subPathNameList, requestMethod)
+                    if (!subPath) return null
+                    // we've found it two deep, add both names, sub name first
+                    subPath.add(0, curName)
+                    subPath.add(0, entry.getKey())
+                    return subPath
+                } else {
+                    return [entry.getKey(), curName]
+                }
+            }
+        }
+        // not immediate child or grandchild subscreen, start recursion
         for (Map.Entry<String, SubscreensItem> entry in subscreensByName.entrySet()) {
             ScreenDefinition subSd = sfi.getScreenDefinition(entry.getValue().getLocation())
             List<String> subPath = subSd.findSubscreenPath(remainingPathNameList, requestMethod)
@@ -255,9 +280,6 @@ class ScreenDefinition {
                 return subPath
             }
         }
-
-        TransitionItem ti = getTransitionItem(curName, requestMethod)
-        if (ti != null) return remainingPathNameList
 
         // is this a file under the screen?
         ResourceReference existingFileRef = getSubContentRef(remainingPathNameList)
