@@ -18,10 +18,10 @@
 
         <cache name="kie.component.releaseId" expire-time-idle="5"/>
 
-        <cache name="screen.location" expire-time-idle="10"/>
+        <cache name="screen.location" expire-time-idle="5"/>
         <cache name="screen.template.mode" expire-time-idle="10"/>
         <cache name="screen.template.location" expire-time-idle="10"/>
-        <cache name="screen.find.path" expire-time-idle="60"/>
+        <cache name="screen.find.path" expire-time-idle="30"/>
 
         <cache name="resource.xml-actions.location" expire-time-idle="5"/>
         <cache name="resource.groovy.location" expire-time-idle="5"/>
