@@ -60,6 +60,9 @@ New Features:
     a LOT slower, but in production (cache timeouts turned off) the full
     expanded path is cached as are the screen definitions so there is very
     little overhead
+  - To help with XML Screen loading overhead, especially in dev mode with
+    timeouts turned on, now only reloads if the file's last modified time
+    has changed
 - Entity Facade:
   - Added in operator (_op) for searchFormInputs/search-form-inputs
   - Added entity.field.@default attribute with a Groovy expression to set a
